Set width for site-wrap to avoid page overflow

--- a/sass/1-tools/_base.sass
+++ b/sass/1-tools/_base.sass
@@ -48,6 +48,7 @@ header
             
 .site-wrap
     margin-left: $nav-width
+    width: 100%
 
     .b_masthead
         background-color: $color-brand 
